Fixed: Double applied BH_FORUM_PATH constant in html_include_css and html_include_javascript. Fixed: Incorrect removal of ../ from html_get_forum_file_path. Fixed: Rolled back changes to style_ie6.css Fixed: Upgrade script was incorrectly using an underscore between prefix and table name. Changed: Added MobileOptimized and viewport meta tags to light mode. Changed: Enclosed all light-mode pages in #content div. Changed: Removed font-size from body class and removed width from h1 class in all CSS files. Changed: Added percentage font-sizes for light mode to scale correctly on mobile screens. Changed: Added style_ie6.css to $exclude_files_array of bh_check_styles.php Changed: Recovered bh_check_function_names.php.

--- a/forum/styles/apple/style.css
+++ b/forum/styles/apple/style.css
@@ -1,7 +1,6 @@
 body {
     background-color: #EEFFB9;
     font-family: verdana, arial, helvetica, sans-serif;
-    font-size: 10pt;
     margin: 10px 5px;
 }
 
@@ -11,6 +10,20 @@ body.top_banner {
     padding: 0px;
 }
 
+body#light-mode {
+    font-size: 62.5%;
+}
+
+body#light-mode img {
+    max-width: 100%;
+    vertical-align: middle;
+}
+
+#content {
+    font-size: 125%;
+    line-height: 140%;
+}
+ 
 a {
     background-color: transparent;
     color: #000000;
@@ -66,7 +79,6 @@ h1 {
     margin: 0px;
     padding: 2px;
     text-decoration: none;
-    width: 100%;
 }
 
 h2 {
