--- a/forum/styles/make_style.css
+++ b/forum/styles/make_style.css
@@ -2,8 +2,21 @@ body {
     background-color: #$elements[body];
     color: #$text_colour[body];
     font-family: verdana, arial, helvetica, sans-serif;
-    font-size: 10pt;
     margin: 10px 5px;
+}
+
+body#light-mode {
+    font-size: 62.5%;
+}
+
+body#light-mode img {
+    max-width: 100%;
+    vertical-align: middle;
+}
+
+#content {
+    font-size: 125%;
+    line-height: 140%;
 }
 
 a {
@@ -61,7 +74,6 @@ h1 {
     margin: 0px;
     padding: 2px;
     text-decoration: none;
-    width: 100%;
 }
 
 h2 {
